--- a/1-debugger/2-zadanie/css/main.css
+++ b/1-debugger/2-zadanie/css/main.css
@@ -1,36 +1,66 @@
+body {
+    font-family: sans-serif;
+    padding: 50px;
+    background: #eee;
+}
+
 p {
     margin-bottom: 30px;
 }
+
 .form {
-    display: flex;
+    background: #fff;
+    border-radius: 5px;
+    display: inline-flex;
+    gap: 20px;
+    padding: 20px;
+    border: 1px solid #eee;
 }
+
 .form-col {
-    margin-right: 20px;
-    min-width: 300px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
+
 .form-input {
     padding: 0 10px;
-    border: 1px solid #bbb;
-    box-shadow: inset 0 2px 2px rgba(0,0,0,0.1);
+    background: #eee;
+    border-radius: 5px;
+    border: 0;
     height: 50px;
     width: 100%;
     box-sizing: border-box;
+    font-weight: bold;
 }
-.form label {
+
+.form-label {
     display: block;
     font-family: sans-serif;
     margin-bottom: 10px;
-    font-size: 13px;
+    font-size: 15px;
 }
+
 .form-btn {
     height: 50px;
-    border:0;
+    border: 0;
     color: #fff;
     border-radius: 4px;
     cursor: pointer;
     background-color: tomato;
-    box-shadow: rgba(255,99,71, 0.5) 0px 10px 40px -10px;
+    box-shadow: rgba(255, 99, 71, 0.5) 0 10px 40px -10px;
+}
+
+.form-btn[disabled] {
+    opacity: 0.5;
+    background: #aaa;
+    box-shadow: none;
+}
+
+@media (max-width: 750px) {
+    .form {
+        flex-direction: column;
+        display: flex;
+    }
 }
